# OpenGL-projects

./: CMakeLists.txt  LICENSE  README.md
Showcase1/res/: fragment_shader.glsl  vertex_shader2.glsl
Showcase1/src/: showcase1.cpp
Showcase2/Shaders/: FragmentShader_11.txt  FragmentShader_21.txt  VertexShader_13.txt  Vertex_light_21.txt
Showcase2/src/: Camera.h  functions.h  showcase21.cpp  showcase22.cpp  showcase23.cpp  showcase24.cpp
Showcase2/src/glm/detail/: func_matrix.hpp
Showcase3/res/Shaders/: FragmentShader1_31.txt  FragmentShader2_31.txt  FragmentShader3_31.txt  FragmentShader4_31.txt  VertexShader1_31.txt  VertexShader4_31.txt
Showcase3/src/: Camera.h  showcase3.cpp  showcase3_functions.h
src/Showcase1/: CMakeLists.txt  showcase1.cpp
src/Showcase1/res/: fragment_shader1.glsl  fragment_shader2.glsl  vertex_shader2.glsl
src/Showcase2/: CMakeLists.txt  Camera.h  functions.h  showcase21.cpp  showcase22.cpp  showcase23.cpp  showcase24.cpp
src/Showcase2/res/: FragmentShader_12.txt  Fragment_light_21.txt  VertexShader_11.txt  VertexShader_12.txt  VertexShader_21.txt
src/Showcase3/: CMakeLists.txt  Camera.h  showcase3.cpp  showcase3_functions.h
src/Showcase3/res/Shaders/: VertexShader3_31.txt
